´fix overflow on bio

--- a/about.css
+++ b/about.css
@@ -1,6 +1,6 @@
 
 :root {
-    --margin_menu_col1_flex:20vw;
+    --margin_menu_col1_flex:22vw;
   }
   
   .flexbox-container-top {
@@ -39,21 +39,42 @@
     width: 0 auto;
     padding: 0 0 ;
     margin: 0 0;
+   
     
   
+    }
+
+.flexbox-item-text {
+
+    min-height: 15vh;
+    padding: 0 0 ;
+    margin: 0 0;
+    word-wrap: break-word ;
+    display: inline-block;
+    background-color: blue;
+    flex-grow: 1;
+    max-width: 30vw;
+    
+    
+    
     }
 
 .flexbox-bio-photo {
   
     height: auto;
     min-width: 30vw;
-    max-width: 41vw;
+    max-width: 32vw;
     align-items: flex-start;
     align-content: flex-start;
     margin-top: 1vh;
     
-  
+ 
 
+}
+
+.p {
+
+    line-break: auto;
 }
 
 .flexbox-gig-list{
@@ -64,7 +85,7 @@
     margin: 0;
     padding: 0;
     justify-content: left;   
-    background-color: rgb(40, 218, 24);
+   
    
  
     
